appId: ${APP_ID}
---
- extendedWaitUntil:
    visible:
      id: "enabled-add-accounts-continue-button"
    timeout: 240000
- assertVisible: ${ACCOUNT_NAME}
- tapOn:
    id: "enabled-add-accounts-continue-button"
